change header z-index to 1000(fix hidden logo)

--- a/client/assets/styles/layout/_header.less
+++ b/client/assets/styles/layout/_header.less
@@ -3,6 +3,7 @@
 	top: 0;
 	right: 0;
 	left: 0;
+	z-index: 1000;
 	position: fixed;
 	min-width: 970px;
 	padding: 0 0 0 261px;
